GROOVY-12223: Honour module boundaries for hidden nestmates